# GAMA

./: .gitignore  LICENSE  README.md  installer.py  main.py  pyproject.toml  requirements.txt
DATA/CONFIG/: experiment_1.ini  experiment_2.ini  experiment_3.ini  experiment_4.ini  experiment_5.ini
DATA/MISC/: matrices.json  payoff_sums_adjusted.csv  unique_payoffs.pl
DATA/PROMPTS/: feedback_prompt_template.txt  game_and_strategy_prompt_template.txt  game_prompt_template.txt  nonnumeric_game_prompt_template.txt  strategy_prompt_template.txt
DATA/STRATEGIES/: random.pl
app/backend/: .env.sample  requirements.txt
app/my-app/: package-lock.json  package.json
experiments/: experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py
lms/: claude.py  gpt4.py
magif/agent/: agent.py  mind.py
magif/autoformalizer/: autoformalizer.py
magif/environment/: agent_pool.py  environment.py
magif/game/: game.py
magif/solver/: engine.py  game_logic.py  prolog_validator.py  solver.pl  solver.py
magif/utils/: base_lm.py  data_object.py  utils.py  validator.py
src/agent/: agent.py  agent_mind.py  memory.py  mind.py
src/autoformalizer/: autoformalizer.py
src/environment/: agent_pool.py  environment.py
src/game/: game.py  game_history.py
src/solver/: engine.py  game_logic.py  prolog_validator.py  solver.py  solver_utils.py
src/tournament/: tournament.py
src/utils/: data_object.py  setup_logger.py  (+2 more)
tutorial/: Tutorial.ipynb
unit_tests/: agent_creation_test.py  agent_mind_test.py  agent_test.py  tournament_test.py  validator_test.py
(+1640 files in other folders)
